Fix contact spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -61,6 +61,7 @@ a:visited {
     padding-right: 10%;
     padding-left: 10%;
 }
+
 .grid-item {
     padding: 20px;
     text-align: center;
@@ -88,5 +89,4 @@ a:visited {
 
 .container {
     padding: 2px 16px;
-    word-wrap: normal;
 }
